--- a/Oldalak/Bejelentkezés/Regisztráció/index.css
+++ b/Oldalak/Bejelentkezés/Regisztráció/index.css
@@ -3,6 +3,26 @@
 }
 
 #body{
+    background-image: url(hatterJPG.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 
+    font-family: 'Graduate', serif;
 }
 
+#cim{
+    color: #FFD700;
+    text-align: center;
+    font-size: 100px;
+}
+
+.gomb{
+    background-color: black;
+    width: 790px;
+    height: 125px;
+    border: 5px solid #FFD700;
+    border-radius: 90px;
+    color: white;
+    font-size: 50px;
+}
